--- a/.github/workflows/Build and deploy Docker app-v2.yml
+++ b/.github/workflows/Build and deploy Docker app-v2.yml
@@ -233,9 +233,8 @@ jobs:
         images: ${{ needs.deploy_infrastructure.outputs.output_containerregistryName }}.azurecr.io/${{ needs.deploy_infrastructure.outputs.output_containerName }}:latest
 
   deploy_application_to_containerapp:
-    name: Build and Deploy Container App
+    name: Deploy Container App
     needs: [docker_build_push, deploy_infrastructure]
-    #needs: [deploy_infrastructure]
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
@@ -319,29 +318,3 @@ jobs:
     #     # Enable Deactivation-Revision Mode of this action. `true` or `false`. Default value is `false`
     #     #deactivate-revision-mode: # optional
     
-
-  # FunctionalTests:
-  #   name: Functional tests
-  #   runs-on: windows-latest
-  #   needs: [deploy_application_to_webapp, deploy_application_to_containerapp]
-  #   steps:
-  #   - uses: actions/checkout@master
-
-  #   - name: Setup .NET Core
-  #     uses: actions/setup-dotnet@v1
-  #     with:
-  #       dotnet-version: ${{ env.DOTNET_VERSION }}
-
-  #   - name: Update web app url in Run Settings
-  #     shell: powershell
-  #     run: |
-  #         cd Application\aspnet-core-dotnet-core.FunctionalTests
-  #         [xml]$runSetting = Get-Content functionalTests.runsettings
-  #         $runSetting.RunSettings.TestRunParameters.ChildNodes.Item(0).value = 'https://${{ env.APPNAME }}.azurewebsites.net/'
-  #         $runSetting.Save("$(pwd)/functionalTests.runsettings")
-
-  #   - name: Run tests
-  #     continue-on-error: false
-  #     run: |
-  #         cd Application\aspnet-core-dotnet-core.FunctionalTests
-  #         dotnet test aspnet-core-dotnet-core.FunctionalTests.csproj -s functionalTests.runsettings
